<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Abbecedario</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="subject">subject</string>
    <string name="teacher">teacher</string>
    <string name="start_end_time">start and end time</string>
    <string name="place">place</string>
    <string name="homework">Homework</string>
    <string name="grades">Grades</string>
    <string name="decoration_header">decorations</string>
    <string name="enabled_days">table columns</string>
    <string name="enable_days_deco">Display the names of the days</string>
    <string name="enable_ords_deco">Display number of slot in the main table</string>
    <string name="slots_per_day">slots per day</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="index_help">Tap to selct. Tap and hold to edit</string>
    <string name="edit_displayed">Edit displayed text</string>
    <string name="add_new">Add new&#8230;</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End Time</string>
    <string name="edit_place">Edit place for this slot</string>
    <string name="edit">Edit</string>
    <string name="reset">Reset</string>
    <string name="see_related">See related</string>
    <string name="edit_subject">Edit Subject</string>
    <string name="name">Name</string>
    <string name="name_short">Short Name</string>
    <string name="default_place">Default place</string>
    <string name="edit_homework">Edit Homework</string>
    <string name="description">Description</string>
    <string name="due_date">Due date</string>
    <string name="edit_grade">Edit Grade</string>
    <string name="score">Score</string>
    <string name="date">Date</string>
    <string name="edit_teacher">Edit Teacher</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="notes">Notes</string>
    <string name="default_teacher">Default teacher</string>
    <string name="required">Required</string>
    <string name="clear">Clear</string>
    <string name="reset_slot">Reset all fields of this slot</string>
</resources>
