<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_teacher"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
    <com.zybnet.abc.view.AllCapsTextView
        style="@style/SmallHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords" />
    
    <com.zybnet.abc.view.AllCapsTextView
        style="@style/SmallHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />
    
    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />
    
    <com.zybnet.abc.view.AllCapsTextView
        style="@style/SmallHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone" />
    
    <EditText
        android:id="@+id/phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />
    
    <com.zybnet.abc.view.AllCapsTextView
        style="@style/SmallHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes" />
    
    <EditText
        android:id="@+id/notes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />

</LinearLayout>