<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_grade"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
    <com.zybnet.abc.view.AllCapsTextView
        style="@style/SmallHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score" />

    <EditText
        android:id="@+id/score"
        style="@style/InputField"
        android:inputType="textCapCharacters" />
    
    <com.zybnet.abc.view.AllCapsTextView
        style="@style/SmallHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date" />
    
    <com.zybnet.abc.view.DateEditText
        android:id="@+id/date"
        style="@style/InputField" />
    
    <com.zybnet.abc.view.AllCapsTextView
        style="@style/SmallHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description" />
    
    <EditText
        android:id="@+id/description"
        style="@style/InputField"
        android:inputType="textCapSentences" />

</LinearLayout>