<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_homework"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <com.zybnet.abc.view.AllCapsTextView
        style="@style/SmallHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <EditText
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />

    <com.zybnet.abc.view.AllCapsTextView
        style="@style/SmallHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date" />
    
    <com.zybnet.abc.view.DateEditText
        android:id="@+id/due"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="date" />

</LinearLayout>