<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <com.zybnet.abc.view.AllCapsTextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/decoration_header" />

    <CheckBox
        android:id="@+id/decor_days"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_days_deco"
        style="@style/Prefs" />

    <CheckBox
        android:id="@+id/decor_ords"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_ords_deco"
        style="@style/Prefs" />

    <include layout="@layout/separator" />

    <LinearLayout
        android:id="@+id/slots_per_day"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical" >

        <com.zybnet.abc.view.AllCapsTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/slots_per_day" />

        <TextView
            android:id="@+id/number_of_slots"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/Prefs" />
    </LinearLayout>

    <include layout="@layout/separator" />

    <com.zybnet.abc.view.AllCapsTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enabled_days" />

    <CheckBox
        android:id="@+id/day_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Prefs" />

    <CheckBox
        android:id="@+id/day_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Prefs" />

    <CheckBox
        android:id="@+id/day_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Prefs" />

    <CheckBox
        android:id="@+id/day_4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Prefs" />

    <CheckBox
        android:id="@+id/day_5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Prefs" />

    <CheckBox
        android:id="@+id/day_6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Prefs" />

    <CheckBox
        android:id="@+id/day_7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Prefs" />

</LinearLayout>