<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/action_bar"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/action_bar_button"
    android:orientation="vertical" >

    <view
        class="com.zybnet.abc.view.NavigateBackView"
        android:id="@+id/actionbar_back"
        android:visibility="invisible"
        android:layout_width="@dimen/action_bar_button"
        android:layout_height="@dimen/action_bar_button"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/back"
        android:src="@drawable/btn_navigation_previous_item"
        style="@style/ActionBarButton" />
    <ImageButton
        android:id="@+id/actionbar_menu"
        android:layout_width="@dimen/action_bar_button"
        android:layout_height="@dimen/action_bar_button"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/place"
        style="@style/ActionBarButton"
        android:src="@drawable/btn_action_overflow" />
    <view
        class="com.zybnet.abc.view.SaveButtonView"
        android:id="@+id/actionbar_save"
        android:visibility="invisible"
        android:layout_width="@dimen/action_bar_button"
        android:layout_height="@dimen/action_bar_button"
        android:layout_toLeftOf="@+id/actionbar_menu"
        android:contentDescription="@string/save"
        style="@style/ActionBarButton"
        android:src="@drawable/btn_save" />

</RelativeLayout>